--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
   "name": "ts-starter",
   "version": "0.1.0",
-  "main": "dist/index.js",
-  "license": "MIT",
+  "description": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "serve": "node dist/",
-    "build": "./node_modules/.bin/tsc",
-    "build:watch": "./node_modules/.bin/tsc -w",
-    "test": "jest --runInBand",
-    "test:watch": "jest --watch --runInBand",
-    "test:cover": "jest --coverage --runInBand",
-    "lint": "./node_modules/.bin/eslint src --ext .ts",
-    "prettier": "./node_modules/.bin/prettier --write './src/**/*.ts'"
+    "start": "node dist/",
+    "build": "tsc -p tsconfig.build.json",
+    "build:watch": "tsc -w -p tsconfig.build.json",
+    "test": "jest --config jest.config.ts",
+    "test:watch": "jest --watch --config jest.config.ts",
+    "test:cover": "jest --coverage --config jest.config.ts",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
-    "@types/jest": "^25.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "eslint": "^6.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^20.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "latest",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "latest",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^18.0.1",
-    "jest": "^25.2.4",
-    "prettier": "^2.0.0",
-    "ts-jest": "^25.2.0",
-    "typescript": "^3.8.0"
+    "jest": "^29.5.0",
+    "prettier": "^2.3.2",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "source-map-support": "^0.5.20",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "_moduleAliases": {
     "@domain": "dist/domain"
